--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.1",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@nivo/bar": "^0.74.0",
+    "@nivo/core": "^0.74.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "chart.js": "^3.6.0",
+    "@visx/group": "^2.1.0",
+    "@visx/mock-data": "^2.1.2",
+    "@visx/scale": "^2.2.2",
+    "@visx/shape": "^2.4.0",
+    "chart.js": "^3.6.2",
     "react": "^17.0.2",
+    "react-animated-text": "^0.1.4",
+    "react-animated-text-builders": "^1.1.0",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
